摄像头配置完成

--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/mm32f527x_e9p.uvprojx
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/mm32f527x_e9p.uvprojx
@@ -929,6 +929,26 @@
               <FileType>5</FileType>
               <FilePath>..\..\libraries\zf_device\zf_device_wireless_uart.h</FilePath>
             </File>
+            <File>
+              <FileName>zf_device_dl1a.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\zf_device\zf_device_dl1a.c</FilePath>
+            </File>
+            <File>
+              <FileName>zf_device_dl1a.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\libraries\zf_device\zf_device_dl1a.h</FilePath>
+            </File>
+            <File>
+              <FileName>zf_device_dm1xa.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\zf_device\zf_device_dm1xa.c</FilePath>
+            </File>
+            <File>
+              <FileName>zf_device_dm1xa.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\libraries\zf_device\zf_device_dm1xa.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
