--- a/2.Firmware/1.CH32V307VCT6/cmake-build-debug-mingw/Makefile
+++ b/2.Firmware/1.CH32V307VCT6/cmake-build-debug-mingw/Makefile
@@ -1928,6 +1928,54 @@ project/code/easy_key.c.s:
 	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/easy_key.c.s
 .PHONY : project/code/easy_key.c.s
 
+project/code/easy_ui.obj: project/code/easy_ui.c.obj
+.PHONY : project/code/easy_ui.obj
+
+# target to build an object file
+project/code/easy_ui.c.obj:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/easy_ui.c.obj
+.PHONY : project/code/easy_ui.c.obj
+
+project/code/easy_ui.i: project/code/easy_ui.c.i
+.PHONY : project/code/easy_ui.i
+
+# target to preprocess a source file
+project/code/easy_ui.c.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/easy_ui.c.i
+.PHONY : project/code/easy_ui.c.i
+
+project/code/easy_ui.s: project/code/easy_ui.c.s
+.PHONY : project/code/easy_ui.s
+
+# target to generate assembly for a file
+project/code/easy_ui.c.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/easy_ui.c.s
+.PHONY : project/code/easy_ui.c.s
+
+project/code/easy_ui_user_app.obj: project/code/easy_ui_user_app.c.obj
+.PHONY : project/code/easy_ui_user_app.obj
+
+# target to build an object file
+project/code/easy_ui_user_app.c.obj:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/easy_ui_user_app.c.obj
+.PHONY : project/code/easy_ui_user_app.c.obj
+
+project/code/easy_ui_user_app.i: project/code/easy_ui_user_app.c.i
+.PHONY : project/code/easy_ui_user_app.i
+
+# target to preprocess a source file
+project/code/easy_ui_user_app.c.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/easy_ui_user_app.c.i
+.PHONY : project/code/easy_ui_user_app.c.i
+
+project/code/easy_ui_user_app.s: project/code/easy_ui_user_app.c.s
+.PHONY : project/code/easy_ui_user_app.s
+
+# target to generate assembly for a file
+project/code/easy_ui_user_app.c.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/easy_ui_user_app.c.s
+.PHONY : project/code/easy_ui_user_app.c.s
+
 project/code/ellipsoid_fitting_process.obj: project/code/ellipsoid_fitting_process.c.obj
 .PHONY : project/code/ellipsoid_fitting_process.obj
 
@@ -2167,6 +2215,30 @@ project/code/pid.s: project/code/pid.c.s
 project/code/pid.c.s:
 	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/pid.c.s
 .PHONY : project/code/pid.c.s
+
+project/code/profile_photo_erbws.obj: project/code/profile_photo_erbws.c.obj
+.PHONY : project/code/profile_photo_erbws.obj
+
+# target to build an object file
+project/code/profile_photo_erbws.c.obj:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/profile_photo_erbws.c.obj
+.PHONY : project/code/profile_photo_erbws.c.obj
+
+project/code/profile_photo_erbws.i: project/code/profile_photo_erbws.c.i
+.PHONY : project/code/profile_photo_erbws.i
+
+# target to preprocess a source file
+project/code/profile_photo_erbws.c.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/profile_photo_erbws.c.i
+.PHONY : project/code/profile_photo_erbws.c.i
+
+project/code/profile_photo_erbws.s: project/code/profile_photo_erbws.c.s
+.PHONY : project/code/profile_photo_erbws.s
+
+# target to generate assembly for a file
+project/code/profile_photo_erbws.c.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles\CH32V307VCT6.dir\build.make CMakeFiles/CH32V307VCT6.dir/project/code/profile_photo_erbws.c.s
+.PHONY : project/code/profile_photo_erbws.c.s
 
 project/code/sendware.obj: project/code/sendware.c.obj
 .PHONY : project/code/sendware.obj
@@ -2522,6 +2594,12 @@ help:
 	@echo ... project/code/easy_key.obj
 	@echo ... project/code/easy_key.i
 	@echo ... project/code/easy_key.s
+	@echo ... project/code/easy_ui.obj
+	@echo ... project/code/easy_ui.i
+	@echo ... project/code/easy_ui.s
+	@echo ... project/code/easy_ui_user_app.obj
+	@echo ... project/code/easy_ui_user_app.i
+	@echo ... project/code/easy_ui_user_app.s
 	@echo ... project/code/ellipsoid_fitting_process.obj
 	@echo ... project/code/ellipsoid_fitting_process.i
 	@echo ... project/code/ellipsoid_fitting_process.s
@@ -2552,6 +2630,9 @@ help:
 	@echo ... project/code/pid.obj
 	@echo ... project/code/pid.i
 	@echo ... project/code/pid.s
+	@echo ... project/code/profile_photo_erbws.obj
+	@echo ... project/code/profile_photo_erbws.i
+	@echo ... project/code/profile_photo_erbws.s
 	@echo ... project/code/sendware.obj
 	@echo ... project/code/sendware.i
 	@echo ... project/code/sendware.s
