--- a/2.Firmware/1.CH32V307VCT6/cmake-build-debug-mingw/CH32V307VCT6.cbp
+++ b/2.Firmware/1.CH32V307VCT6/cmake-build-debug-mingw/CH32V307VCT6.cbp
@@ -534,6 +534,12 @@
 		<Unit filename="S:/WorkSpace/bicycle motocross/CH32-Bike-Overland/2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_usb_cdc.h">
 			<Option target="CH32V307VCT6"/>
 		</Unit>
+		<Unit filename="S:/WorkSpace/bicycle motocross/CH32-Bike-Overland/2.Firmware/1.CH32V307VCT6/project/code/buzzer.c">
+			<Option target="CH32V307VCT6"/>
+		</Unit>
+		<Unit filename="S:/WorkSpace/bicycle motocross/CH32-Bike-Overland/2.Firmware/1.CH32V307VCT6/project/code/buzzer.h">
+			<Option target="CH32V307VCT6"/>
+		</Unit>
 		<Unit filename="S:/WorkSpace/bicycle motocross/CH32-Bike-Overland/2.Firmware/1.CH32V307VCT6/project/code/complementary_filter.c">
 			<Option target="CH32V307VCT6"/>
 		</Unit>
