--- a/2.Firmware/1.CH32V307VCT6/CMakeLists.txt
+++ b/2.Firmware/1.CH32V307VCT6/CMakeLists.txt
@@ -199,4 +199,4 @@ add_executable(CH32V307VCT6
         project/code/user_flash.h
         project/code/inertial_navigation.h
         project/code/buzzer.c
-        project/code/buzzer.h project/code/ctrl.h)
+        project/code/buzzer.h project/code/ctrl.h project/code/graph_mapping.c)
