fix kalman fusion bug
在逐飞GPS解析函数中加入测量误差更新。

--- a/2.Firmware/1.CH32V307VCT6/CMakeLists.txt
+++ b/2.Firmware/1.CH32V307VCT6/CMakeLists.txt
@@ -199,5 +199,7 @@ add_executable(CH32V307VCT6
         project/code/user_flash.h
         project/code/inertial_navigation.h
         project/code/buzzer.c
-        project/code/buzzer.h project/code/ctrl.h project/code/graph_mapping.c)
+        project/code/buzzer.h
+        project/code/ctrl.h
+        project/code/graph_mapping.c)
 
